--- a/index4.html
+++ b/index4.html
@@ -92,7 +92,17 @@
     <footer>
         
     
-    <img src="img/footer.png" alt="" class="footer" > 
+    <div class="footer">
+        <h6 class="h6f">
+            Made With Love By Figmaland All Right Reserved 
+        </h6>
+        <div class="logos">
+            <img src="img/facebook.png" alt="" class="facebook">
+            <img src="img/inst.png" alt="" class="inst">
+            <img src="img/twitter.png" alt="" class="twitter">
+        </div>
+
+    </div>
     </footer>
 </body>
 </html>
